# StepsRecorder

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ACCESSIBILITY.md  AI_AGENT_RULES.md  API_CONTRACT.md  ARCHITECTURE.md  CAPTURE_MODES.md  CODING_STANDARDS.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  ERROR_HANDLING.md  PERFORMANCE_REQUIREMENTS.md  PRODUCT_REQUIREMENTS.md  ROADMAP.md  SECURITY_REQUIREMENTS.md  TESTING_STRATEGY.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/capture/: mod.rs  noop.rs  screenshot.rs  service.rs  windows.rs
src-tauri/src/repositories/: dev_fixtures.rs  export_history.rs  mod.rs  screenshot_edits.rs  sessions.rs  settings.rs  steps.rs
src/app/: App.module.css  App.tsx  routes.tsx
src/components/button/: Button.module.css  Button.tsx
src/components/card/: Card.module.css  Card.tsx
src/components/layout/: PageSection.module.css  PageSection.tsx
src/features/recording/: RecordingControlBar.module.css  RecordingControlBar.tsx  RecordingHomePage.module.css  RecordingHomePage.tsx  RecordingStatusPanel.module.css  RecordingStatusPanel.tsx  recordingTypes.ts
src/features/sessions/: SessionDetailPage.module.css  SessionDetailPage.tsx
src/features/settings/: SettingsPage.module.css  SettingsPage.tsx
src/lib/: dateFormat.ts  fileSize.ts  tauriClient.ts
src/styles/: global.css  tokens.css
src/types/: app.ts  export.ts  session.ts  step.ts
