[package]
name = "steps-recorder"
version = "0.1.0"
description = "Windows Steps Recorder desktop app"
authors = ["Steps Recorder Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "steps_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_Graphics_Gdi"
] }
